fix: modified footer color, the spacing class is added and font size h2 is corrected

--- a/sass/settings/_globals.scss
+++ b/sass/settings/_globals.scss
@@ -25,9 +25,8 @@ h1 {
 h2 {
   font-family: $title-bold;
   font-size: $typo-m;
-  @media (min-width: 60rem) {
+  @media (min-width: 80rem) {
     font-size: $typo-l;
-
   }
 }
 
@@ -41,4 +40,18 @@ p {
   margin-left: auto;
   margin-right: auto;
   width: 85%;
+}
+
+.between-sections {
+  background-color: $pink;
+  border-radius: 0 2rem 2rem 0 ;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  height: 10rem;
+  margin-top: 10%;
+  width: 60%;
+  @media (min-width: 60rem) {
+    height: 25rem;
+    margin-top: 10%;
+    width: 40%;
+  }
 }
